<FormField/> - fixed small content without stretchContent (#4161)
* <FormField/> - fixed small content without stretchContent

* <FormField/> - fixed visual

--- a/src/FormField/FormField.scss
+++ b/src/FormField/FormField.scss
@@ -9,12 +9,15 @@ $childrenMargin: 6px;
   flex-wrap: wrap;
   font-size: initial;
 
+  .children {
+    margin: auto 0;
+  }
+
   &.stretchContent {
     display: flex;
 
     .children {
       flex-grow: 1;
-      margin: auto 0;
     }
   }
 }
